--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,7 @@
-
-appid: 8506ad10
-apisecret: ZGViZTgyYzlhYmE0NGI4NDFkZWI1ZWRh
-apiKey: d1115fdef5cb534ae5abcc2404c0590c
-hosturl: wss://spark-api.xf-yun.com/v4.0/chat
-domain: 4.0Ultra
+appid: 
+apisecret: 
+apiKey: 
+hosturl: 
+domain: 
 
 
